Fix for homepage search bar going too high

--- a/projects/srm/src/app/homepage/homepage.component.less
+++ b/projects/srm/src/app/homepage/homepage.component.less
@@ -220,7 +220,7 @@
                     pointer-events: none;
                 }
                 &.searching {
-                    transform: translateY(-150px);
+                    transform: translateY(-130px);
                     app-autocomplete-results {
                         pointer-events: all;
                         display: inherit;
